--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -5,5 +5,6 @@
 (A) Implement debugger detector for OpenBSD. +Core
 (A) Wrapper debugger detector for Windows. +Core
 (A) Documentation. +Documentation
+x (B) Write some sample that uses aegis_has_debugger() function. +Samples, +Documentation
 x (A) Implement debugger detector for Linux. +Core
 x (A) Implement build infrastructure. +Build
