--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,10 +1,10 @@
-(B) Write some README. +Documentation, +RepoMaintenance
 (A) Think about a better way to automate some test. +Test
 (A) Implement debugger detector for FreeBSD. +Core
 (A) Implement debugger detector for NetBSD. +Core
 (A) Implement debugger detector for OpenBSD. +Core
 (A) Wrapper debugger detector for Windows. +Core
-(A) Documentation. +Documentation
+x (A) Documentation. +Documentation
+x (B) Write some README. +Documentation, +RepoMaintenance
 x (A) Implement gorgon mechanism. +Core
 x (B) Write some sample that uses aegis_has_debugger() function. +Samples, +Documentation
 x (A) Implement debugger detector for Linux. +Core
