--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,6 +1,7 @@
 (A) Implement debugger detector for NetBSD. +Core
 (A) Implement debugger detector for OpenBSD. +Core
 (A) Wrapper debugger detector for Windows. +Core
+x (B) Change license to BSD-4-clause.
 x (A) Also test against LLDB when it is present. +Test
 x (A) Implement debugger detector for FreeBSD. +Core
 x (A) Think about a better way to automate some test. +Test
